Add testPrintAudit method